2002-05-03  Seth Robertson  <seth@yeah.baka.org>

	* src/bttcp.c (main): Don't fall through multicast looping to ttl.

2002-05-02  Seth Robertson  <seth@startide.sysdetect.com>

	* lib/b_run.c (bk_run_once): Unnecessary initialization that makes
	be feel better.
	(bk_run_poll_add): Uh, actually need to assign brfn after allocation

	* src/bttcp.c (main): Switch to dash versions of argument names,
	and while I'm at it, get rid of the spaces in a long option
	names...(hey it works!)

2002-05-01  Seth Robertson  <seth@startide.sysdetect.com>

	* lib/b_stdsock.c (bk_stdsock_multicast): Move maddrgroup
	reference inside of maddrgroup protection

2002-05-01  James Tanis  <jtt@saint.sysdetect.com>

	* lib/b_string.c (bk_string_atod): Use portable math functions

2002-05-01  James Tanis  <jtt@winwood.sysdetect.com>

	* lib/b_string.c (bk_string_atod): Convert strings to doubles.
	(bk_string_atof): Convert strings to floats.

2002-04-30  Seth Robertson  <seth@startide.sysdetect.com>

	* lib/b_addrgroup.c: Run new callback state
	"BkAddrGroupStateSocket" every time a new socket() is created, to
	allow user opportunity to set socket options like multicast and
	broadcast.

	* src/bttcp.c: Enable UDP, multicast, and broadcast support, such
	as it is.

	* lib/b_stdsock.c: Support routines to turn on multicast and
	broadcast abilities for sockets.

2002-04-29  James Tanis  <jtt@winwood.sysdetect.com>

	* lib/b_ioh.c: Revert "fix" made recently to allow ioh_close's
	on full queues to succeed. Replace with real fix (which is to
	bypass queue full check on commands).

2002-04-26  Alexander Dupuy  <dupuy@sysdetect.com>

	* include/libbk_oscompat.h: map O_SYNC->O_FSYNC, O_NONBLOCK->O_NDELAY
	on any OS which feels the need to be different
	
2002-04-26  James Tanis  <jtt@saint.sysdetect.com>

	* lib/b_pollio.c (polling_io_ioh_handler): Using [0] to reference
	a pointer which is not in an array is legal but ugly.

	* lib/b_bnbio.c (bk_iohh_bnbio_write): Do at least one poll on